modified modules paths